# defer-rs

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: defer_scope.md  lib.rs
src/: lib.rs
