[package]
name = "defer-rs-impl"
version = "0.1.0"
authors = ["Ahmad AlHallak <ahmad.mh.alhallak@gmail.com>"]
description = "proc_macros for the `defer-rs` crate"
edition = "2021"
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/defer-rs"
homepage = "https://github.com/AhmadAlHallak/defer-rs"
repository = "https://github.com/AhmadAlHallak/defer-rs"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.53", features = ["full"] }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
